Mise en place du home

--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -16,14 +16,9 @@ box-sizing: content-box !important;
 }
 
 /*________________________________________________________________ScrollMagic:*/
-@import 'home/scrollmagic.scss';
+/*@import 'scrollmagic.scss';*/
 /*________________________________________________________________ScrollMagic:*/
 
 /*______________________________________________________________________________Home:*/
-/*_____________________________________________________________________Header:*/
-@import 'home/header.scss';
-/*____________________________________________________________________Content:*/
-@import 'home/content.scss';
-/*_____________________________________________________________________Footer:*/
-@import 'home/footer.scss';
+@import 'home/home.scss';
 /*______________________________________________________________________________fin Home:*/
