--- a/asset/css/home/home.scss
+++ b/asset/css/home/home.scss
@@ -6,12 +6,11 @@
     height: 10vh;
 
     .header-menu--colonne {
-
       .header-menu--colonne---item {
         text-align: center;
         padding-top: 2vh;
 
-        :hover{
+        :hover {
           text-decoration: none;
         }
       }
@@ -29,9 +28,10 @@
 
     .content-brand--colonne---logo {
       height: 25vh;
-        img {
-          max-height: 25vh;
-        }
+
+      img {
+        max-height: 25vh;
+      }
     }
 
     .content-brand--colonne---subtitle {
@@ -42,6 +42,14 @@
   }
 
   .content-search {
+    .form-control {
+      border-radius: 0.50rem;
+    }
+
+    .btn-secondary {
+      border-bottom-right-radius: 0.50rem !important;
+      border-top-right-radius: 0.50rem !important;
+    }
   }
 }
 /*___________________________________________________________________//CONTENT*/
@@ -53,6 +61,10 @@
   .footer-cgu {
     height: 5vh;
     text-align: center;
+
+    :hover {
+      text-decoration: none;
+    }
   }
 }
 /*____________________________________________________________________//FOOTER*/
