--- a/asset/css/home/home.scss
+++ b/asset/css/home/home.scss
@@ -1,4 +1,17 @@
+.body-home {
+  background-color: #000000;
+  height: 100vh;
+  width: 100vw;
+}
+
+#gradient {
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
 /*______________________________________________________________________HEADER*/
+
 .header {
   height: 15vh;
 
@@ -19,7 +32,6 @@
 }
 /*____________________________________________________________________//HEADER*/
 /*_____________________________________________________________________CONTENT*/
-
 .content {
   height: 80vh;
 
@@ -54,7 +66,6 @@
 }
 /*___________________________________________________________________//CONTENT*/
 /*______________________________________________________________________FOOTER*/
-
 .footer {
   height: 5vh;
 
