--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -14,6 +14,14 @@ margin-left: 0px !important;
 margin-right: 0px !important;
 box-sizing: content-box !important;
 }
+body {
+  opacity: 0;
+  transition: all 1s linear;
+}
+
+body.fade-in {
+  opacity: 1;
+}
 
 /*________________________________________________________________ScrollMagic:*/
 /*@import 'scrollmagic.scss';*/
