--- a/asset/css/home/home.scss
+++ b/asset/css/home/home.scss
@@ -1,4 +1,4 @@
-.body-home {
+.home-body {
   background-color: #000000;
   height: 100vh;
   width: 100vw;
@@ -10,72 +10,3 @@
   padding: 0;
   margin: 0;
 }
-/*______________________________________________________________________HEADER*/
-
-.header {
-  height: 15vh;
-
-  .header-menu {
-    height: 10vh;
-
-    .header-menu--colonne {
-      .header-menu--colonne---item {
-        text-align: center;
-        padding-top: 2vh;
-
-        :hover {
-          text-decoration: none;
-        }
-      }
-    }
-  }
-}
-/*____________________________________________________________________//HEADER*/
-/*_____________________________________________________________________CONTENT*/
-.content {
-  height: 80vh;
-
-  .content-brand {
-    height: 35vh;
-
-    .content-brand--colonne---logo {
-      height: 25vh;
-
-      img {
-        max-height: 25vh;
-      }
-    }
-
-    .content-brand--colonne---subtitle {
-      height: 6vh;
-      text-align: center;
-      padding-top: 4vh;
-    }
-  }
-
-  .content-search {
-    .form-control {
-      border-radius: 0.50rem;
-    }
-
-    .btn-secondary {
-      border-bottom-right-radius: 0.50rem !important;
-      border-top-right-radius: 0.50rem !important;
-    }
-  }
-}
-/*___________________________________________________________________//CONTENT*/
-/*______________________________________________________________________FOOTER*/
-.footer {
-  height: 5vh;
-
-  .footer-cgu {
-    height: 5vh;
-    text-align: center;
-
-    :hover {
-      text-decoration: none;
-    }
-  }
-}
-/*____________________________________________________________________//FOOTER*/
