--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -39,6 +39,7 @@ box-sizing: content-box !important;
 
 /*______________________________________________________________________________Home:*/
 @import 'home/home.scss';
+
 @import 'component/home-header.scss';
 @import 'component/home-content.scss';
 @import 'component/home-footer.scss';
@@ -53,6 +54,7 @@ box-sizing: content-box !important;
 
 @import 'component/blog-header.scss';
 @import 'component/blog-categorie.scss';
+@import 'component/blog-card.scss';
 @import 'component/blog-footer.scss';
 /*______________________________________________________________________________fin Blog:*/
 /*______________________________________________________________________________Blog:*/
