--- a/asset/css/component/boutton.scss
+++ b/asset/css/component/boutton.scss
@@ -1,6 +1,6 @@
 .home-header, .blog-header, .home-footer{
   a {
-    border: solid 2px white !important;
+    border: solid 2px black !important;
     background: rgba(255, 255, 255, .27);
     color: black;
   }
