--- a/asset/css/component/home-footer.scss
+++ b/asset/css/component/home-footer.scss
@@ -3,7 +3,7 @@
 .home-footer {
   height: 10vh;
 
-  .home-footer-cgu {
+  .home-footer--colonne---cgu {
     height: 10vh;
     text-align: center;
 
