--- a/asset/css/component/boutton.scss
+++ b/asset/css/component/boutton.scss
@@ -1,7 +1,27 @@
-.home-header, .blog-header, .home-footer{
+.home-header, .home-footer, .blog-footer{
+
   a {
-    border: solid 2px black !important;
-    background: rgba(255, 255, 255, .27);
-    color: black;
+
+  	-webkit-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  	-moz-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  	-ms-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  	-o-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  	transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  	display: block;
+  	text-decoration: none;
+  	border-radius: 4px;
+  	padding: 20px 30px;
+
+  }
+
+  a.button {
+        border: solid 1px white !important;
+  	color: rgba(30, 22, 54, 0.6);
+    text-decoration: none;
+  }
+
+  a.button:hover {
+  	color: rgba(255, 255, 255, 0.85);
+  	box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
   }
 }
