--- a/asset/css/component/boutton.scss
+++ b/asset/css/component/boutton.scss
@@ -1,27 +1,100 @@
-.home-header, .home-footer, .blog-footer{
 
-  a {
+  //=== Drawing effect
 
-  	-webkit-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  	-moz-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  	-ms-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  	-o-transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  	transition: all 800ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-  	display: block;
-  	text-decoration: none;
-  	border-radius: 4px;
-  	padding: 20px 30px;
+  @mixin boutton-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
+    box-shadow: inset 0 0 0 $width $color;
+    color: $color;
+    transition: color $duration $duration/3;
+    position: relative;
+      border-radius: 4px;
 
+    &::before,
+    &::after {
+      border-radius: 4px;
+      border: 0 solid transparent;
+      box-sizing: border-box;
+      content: '';
+      pointer-events: none;
+      position: absolute;
+      width: 0; height: 0;
+
+      #{$vertical}: 0;
+      #{$horizontal}: 0;
+    }
+
+    &::before {
+      $h-side: if($horizontal == 'left', 'right', 'left');
+
+      border-#{$vertical}-width: $width;
+      border-#{$h-side}-width: $width;
+    }
+
+    &::after {
+      $v-side: if($vertical == 'top', 'bottom', 'top');
+
+      border-#{$v-side}-width: $width;
+      border-#{$horizontal}-width: $width;
+    }
+
+    &:hover {
+      color: $hover;
+
+      &::before,
+      &::after {
+        border-color: $hover;
+        transition: border-color 0s, width $duration, height $duration;
+        width: 100%;
+        height: 100%;
+      }
+
+      &::before { transition-delay: 0s, 0s, $duration; }
+
+      &::after { transition-delay: 0s, $duration, 0s; }
+    }
   }
 
-  a.button {
-        border: solid 1px white !important;
-  	color: rgba(30, 22, 54, 0.6);
-    text-decoration: none;
+
+
+
+
+
+
+
+
+
+
+
+
+  .draw-border {
+    @include boutton-border-drawing(#474747, #bea857, 2px, bottom, right);
   }
 
-  a.button:hover {
-  	color: rgba(255, 255, 255, 0.85);
-  	box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
+
+
+
+
+
+
+
+
+
+
+
+
+
+  //=== Button styling, semi-ignore
+  .button-menu {
+
+    margin: 5px;
+    text-align: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+    line-height: 1.5;
+    padding: 1em 2em;
+    letter-spacing: 0.05rem;
+    display: block !important;
+    &:hover{
+          text-decoration: none !important;
+    }
   }
-}
