--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -59,9 +59,10 @@ box-sizing: content-box !important;
 @import 'component/blog/blog-header.scss';
 @import 'component/blog/blog-header--reseau.scss';
 @import 'component/blog/blog-categorie.scss';
-@import 'component/blog/blog-card.scss';
+@import 'component/blog/blog-content.scss';
+@import 'component/blog/blog-content--card.scss';
 @import 'component/blog/blog-footer.scss';
 /*______________________________________________________________________________fin Blog:*/
-/*______________________________________________________________________________Blog:*/
-
-/*______________________________________________________________________________fin Blog:*/
+/*______________________________________________________________________________Contact:*/
+@import 'component/contact/contact-header.scss';
+/*______________________________________________________________________________fin Contact:*/
