--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -63,6 +63,15 @@ box-sizing: content-box !important;
 @import 'component/blog/blog-content--card.scss';
 @import 'component/blog/blog-footer.scss';
 /*______________________________________________________________________________fin Blog:*/
+
 /*______________________________________________________________________________Contact:*/
 @import 'component/contact/contact-header.scss';
 /*______________________________________________________________________________fin Contact:*/
+
+/*______________________________________________________________________________Blog-categorie:*/
+@import 'component/Blog-categorie/blog-categorie-header.scss';
+/*______________________________________________________________________________fin Blog-categorie:*/
+
+/*______________________________________________________________________________Blog-article:*/
+@import 'component/Blog-article/blog-article-header.scss';
+/*______________________________________________________________________________fin Blog-article:*/
