--- a/asset/css/component/home/home-content.scss
+++ b/asset/css/component/home/home-content.scss
@@ -31,4 +31,7 @@
     }
   }
 }
+.modal-dialog{
+  max-width: 700px !important;
+}
 /*___________________________________________________________________//CONTENT*/
