--- a/asset/css/component/blog-content--card.scss
+++ b/asset/css/component/blog-content--card.scss
@@ -27,28 +27,9 @@ sans-serif;
   border: none !important;
   float: left;
   width: 100%;
-  .menu-content {
-    @include cf;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    li {
-      display: inline-block;
-    }
-    a {
-      text-decoration: none !important;
-      color: $white;
-    }
-    span {
-      position: absolute;
-      left: 50%;
-      top: 0;
-      font-size: 10px;
-      font-weight: 700;
-      font-family: 'Open Sans';
-      transform: translate(-50%, 0);
-    }
-  }
+  margin-bottom: 1vh !important;
+  margin-top: 1vh !important;
+
   .wrapper {
     background-color: $white;
     min-height: 335px;
