--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -34,7 +34,9 @@ box-sizing: content-box !important;
 /*______________________________________________________________________________Card:*/
 @import 'component/blog-content--card.scss';
 /*______________________________________________________________________________fin Card:*/
-
+/*________________________________________________________________Background:*/
+@import 'component/background.scss';
+/*________________________________________________________________Background:*/
 
 
 
