--- a/asset/css/component/home/home-content.scss
+++ b/asset/css/component/home/home-content.scss
@@ -35,3 +35,10 @@
   max-width: 700px !important;
 }
 /*___________________________________________________________________//CONTENT*/
+.modal-body--numero{
+  font-weight: bold;
+  font-size: 30px;
+}
+.modal-body{
+  text-align: center;
+}
