--- a/asset/css/component/blog-content--card.scss
+++ b/asset/css/component/blog-content--card.scss
@@ -156,14 +156,14 @@ sans-serif;
 .card:after {
   position: absolute;
   content: "";
-  top: 5vw;
+  top: 4vw;
   left: 0;
   right: 0;
   z-index: -1;
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  transform: scale(0.75);
+  transform: scale(0.80);
   -webkit-filter: blur(5vw);
   -moz-filter: blur(5vw);
   -ms-filter: blur(5vw);
@@ -185,12 +185,12 @@ sans-serif;
 }
 @keyframes textColor {
   0% {
-    color: #7e0fff;
+    color: #0cd1d7;
   }
   50% {
-    color: #0fffc1;
+    color: #0f6fff;
   }
   100% {
-    color: #7e0fff;
+    color: #0fffb0;
   }
 }
