mise en place des couleur et background

--- a/asset/css/component/blog/blog-header--reseau.scss
+++ b/asset/css/component/blog/blog-header--reseau.scss
@@ -80,7 +80,7 @@
     width: 90%;
     height: 90%;
     line-height: 40px;
-    margin: 2px 2px;
+    padding: 2px, 2px !important;
     text-align: center;
     position: relative;
     overflow: hidden;
