--- a/asset/css/page/blog.scss
+++ b/asset/css/page/blog.scss
@@ -3,7 +3,38 @@
 .blog-side-bar {
   position: fixed !important;
   height: 100vh;
-  background-color: $couleur;
+
+      background: linear-gradient(45deg, #83c8ff 0%, #1d4e6f 100%);
+      background-size: 200% 200%;
+      height: 100%;
+      width: 100%;
+      -webkit-animation: background 6s ease infinite;
+              animation: background 6s ease infinite;
+
+
+    @-webkit-keyframes background {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    @keyframes background {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
 
 }
 @media screen and (max-width: 766px) {
@@ -18,4 +49,7 @@
 
 .blog-body--colonne {
   display: block !important;
+}
+.blog-content{
+  background-color: rgb(32, 32, 32);
 }
