--- a/asset/css/component/blog-content--card.scss
+++ b/asset/css/component/blog-content--card.scss
@@ -24,6 +24,7 @@ sans-serif;
 
 // Base styles
 .card {
+  background-color: #fff0 !important;
   border: none !important;
   float: left;
   width: 100%;
@@ -31,10 +32,10 @@ sans-serif;
   margin-top: 1vh !important;
 
   .wrapper {
-    background-color: $white;
     min-height: 335px;
     position: relative;
     overflow: hidden;
+    box-shadow: 0 19px 38px rgba($black, 0.3), 0 15px 12px rgba($black, 0.2);
     &:hover {
       .data {
         transform: translateY(0);
@@ -74,7 +75,7 @@ sans-serif;
 
 // Second example styles
 .blog-content-card--colonne---section{
-  margin: 5px;
+  margin: 15px;
 }
 .blog-content-card--colonne---section----box-----card {
   .wrapper {
@@ -142,55 +143,5 @@ sans-serif;
         opacity: 1;
       }
     }
-  }
-}
-
-
-
-.card {
-  position: relative;
-  color: #252B37;
-  background-color: #151823;
-  animation: textColor 10s ease infinite;
-}
-.card:after {
-  position: absolute;
-  content: "";
-  top: 4vw;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  transform: scale(0.80);
-  -webkit-filter: blur(5vw);
-  -moz-filter: blur(5vw);
-  -ms-filter: blur(5vw);
-  filter: blur(5vw);
-  background: linear-gradient(270deg, #0fffc1, #7e0fff);
-  background-size: 200% 200%;
-  animation: animateGlow 10s ease infinite;
-}
-@keyframes animateGlow {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-@keyframes textColor {
-  0% {
-    color: #0cd1d7;
-  }
-  50% {
-    color: #0f6fff;
-  }
-  100% {
-    color: #0fffb0;
   }
 }
