--- a/asset/css/component/blog/blog-content.scss
+++ b/asset/css/component/blog/blog-content.scss
@@ -1,5 +1,6 @@
 .blog-content-card--colonne---titre{
   font-size: 35px;
+  margin-top: 7vh;
   text-align: center;
   color: white;
 }
@@ -7,8 +8,5 @@
   width: 5% !important;
 }
 .carousel-inner {
-    padding-bottom: 120px !important;
+    padding-bottom: 20px !important;
   }
-.blog-content{
-  background-color: #171717;
-}
