finalisation des pages

--- a/asset/css/component/cgu/cgu-header.scss
+++ b/asset/css/component/cgu/cgu-header.scss
@@ -1,8 +1,8 @@
-.contact-side-bar-header {
+.cgu-side-bar-header {
 
-  .contact-side-bar-header-menu {
-    .contact-side-bar-header--colonne {
-      .contact-side-bar-header--colonne---item {
+  .cgu-side-bar-header-menu {
+    .cgu-side-bar-header--colonne {
+      .cgu-side-bar-header--colonne---item {
         text-align: center;
         padding-top: 2vh;
 
@@ -20,14 +20,14 @@
     }
   }
 }
-.contact-side-bar-header--colonne---logo {
+.cgu-side-bar-header--colonne---logo {
   margin-top: 2vh !important;
 }
-.contact-side-bar-header--colonne---titre{
+.cgu-side-bar-header--colonne---titre{
 margin: 15px;
 text-align: center;
 }
-.contact-side-bar-header--colonne---logo----box a{
+.cgu-side-bar-header--colonne---logo----box a{
     border: none !important;
   }
 .modal-body{
